# Human_detection_and_tracking

./: CMakeLists.txt  LICENSE  README.md  build_run.sh  build_with_coverage.sh  download_weights.sh  doxygen.config  install_dependencies.sh
.github/workflows/: build_and_coveralls.yml
app/: CMakeLists.txt  main.cpp
docs/html/: annotated.html  app_2main_8cpp.html  app_2main_8cpp__incl.map  app_2main_8cpp__incl.md5  classBarEnvironment-members.html  classBarEnvironment.html  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  classBiggestIntConvertible.html  classCommonTest-members.html  classCommonTest.html  classConversionHelperBase.html  classConversionHelperDerived.html  classCounter-members.html  classCounter.html  classDisabledTest.html  classExpectFailureTest-members.html  classExpectFailureTest.html  classFailedTest.html  classFailingParamTest.html  classFatalFailureInFixtureConstructorTest-members.html  classFatalFailureInFixtureConstructorTest.html  classFatalFailureInSetUpTest-members.html  classFatalFailureInSetUpTest.html  classFieldHelper-members.html  classFieldHelper.html  classFooEnvironment-members.html  classFooEnvironment.html  classFooTest-members.html  classFooTest.html  classGMockOutputTest-members.html  (+2750 more)
include/: model.hpp  preprocess.hpp  track.hpp
results/: cppcheck.txt  cppcheck_phase1.txt  cppcheck_phase2.txt  cpplint.txt  cpplint_phase2.txt  valgrind_phase1.txt  valgrind_phase1.txtc  valgrind_phase2.txt
src/: CMakeLists.txt  model.cpp  preprocess.cpp  track.cpp
test/: CMakeLists.txt  test.cpp
(+1045 files in other folders)
